Update manual: {cppa => caf} and fix examples

--- a/manual/ActorManagement.tex
+++ b/manual/ActorManagement.tex
@@ -1,6 +1,6 @@
 \section{Management \& Error Detection}
 
-\libcppa adapts Erlang's well-established fault propagation model.
+\lib adapts Erlang's well-established fault propagation model.
 It allows to build actor subsystem in which either all actors are alive or have collectively failed.
 
 \subsection{Links}
