--- a/manual/GroupCommunication.tex
+++ b/manual/GroupCommunication.tex
@@ -1,7 +1,7 @@
 \section{Group Communication}
 \label{Sec::Group}
 
-\libcppa supports publish/subscribe-based group communication.
+\lib supports publish/subscribe-based group communication.
 Actors can join and leave groups and send messages to groups.
 
 \begin{lstlisting}
