--- a/manual/NetworkIO.tex
+++ b/manual/NetworkIO.tex
@@ -2,7 +2,7 @@
 \label{Sec::NetworkIO}
 
 When communicating to other services in the network, sometimes low-level socket IO is inevitable.
-For this reason, \libcppa provides \emph{brokers}.
+For this reason, \lib provides \emph{brokers}.
 A broker is an event-based actor running in the middleman that multiplexes socket IO.
 It can maintain any number of acceptors and connections.
 Since the broker runs in the middleman, implementations should be careful to consume as little time as possible in message handlers.
